# capstone_2026

./: .gitignore  README.md
ROS2TEST/: README.md  package.xml  setup.cfg  setup.py
ROS2TEST/install/: local_setup.sh  setup.sh
ROS2TEST/install/robot_arm_ros2/lib/robot_arm_ros2/: ik_node  meshcat_bridge  sweep_node
ROS2TEST/install/robot_arm_ros2/share/robot_arm_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2TEST/install/robot_arm_ros2/share/robot_arm_ros2/launch/: arm.launch.py
ROS2TEST/install/robot_arm_ros2/share/robot_arm_ros2/rviz/: arm.rviz
ROS2TEST/install/robot_arm_ros2/share/robot_arm_ros2/urdf/: arm.urdf
ROS2TEST/launch/: arm.launch.py
ROS2TEST/log/: latest_build
ROS2TEST/robot_arm_ros2/: config.py  ik_node.py  ik_solver.py  meshcat_bridge.py  sweep_node.py
main/: README.md
main/src/ik_solver/: README.md  setup.py
main/src/robot_launcher/: setup.cfg
main/src/rviz_viewer/: package.xml  setup.cfg
main/src/test_sweep/: package.xml  setup.py
main/src/wasd_teleop/: package.xml  setup.cfg  setup.py
podman/: Dockerfile  README.MD  entrypoint.sh
podman/.devcontainer/: devcontainer.json
ros2rev1/: .gitignore  README.md
ros2rev1/src/ik_solver/: package.xml
ros2rev1/src/robot_arm_ros2/: package.xml  setup.py
ros2rev1/src/robot_launcher/: package.xml  setup.py
src/: README.md  hw_process.py  ik_process.py  mock_dynamixel_sdk.py  test_ik_no_source.py  test_ik_no_unity.py
src/robot_arm/: comm.py  config.py
src/robot_arm/urdf/: arm.urdf
src/unity/: RobotIKSender.cs  RobotVisualizer.cs
(+14 files in other folders)
